see #19354 - Fix compile error
git-svn-id: https://josm.openstreetmap.de/svn/trunk@16569 0c6e7542-c601-0410-84e7-c038aed88b3b